# SocketIRC

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Client.c  Server.c  test.c
src/lib/: cmd.h  console.h  cpool.h  cprofile.h
